# ManeLoca

./: .gitmodules  README.md  electron.d.ts  merge_data.py  next.config.mjs  package-lock.json  package.json  page.tsx  pnpm-lock.yaml  tsconfig.json
electron/: main.js  preload.js
src/: middleware.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/app/: layout.tsx  page.tsx
src/app/[version]/: page.tsx
src/app/components/: CoordinateSearch.tsx  ExportButton.tsx  VersionSwitch.tsx
src/app/components/DataTable/: StableTable.tsx  Table.tsx  columns.tsx
src/app/lib/: data.ts  types.ts
