[package]
name = "maneloca"
version = "1.0.0"
description = "Genome Position Locate in Mane Select Transcript"
authors = ["pzweuj"]
license = "Apache-2.0"
repository = "https://github.com/pzweuj/maneloca"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
